# aoc-2022

./: .gitignore  .gitmodules  Cargo.toml  README.org
01-calorie-counting/c/: Makefile  main.c
01-calorie-counting/go/: go.mod  main.go
01-calorie-counting/rust/: Cargo.toml
02-rock-paper-scissors/c/: main.c
02-rock-paper-scissors/go/: go.mod  main.go
02-rock-paper-scissors/rust/: Cargo.toml
03-rucksack-reorganization/cpp/: Makefile  solution.cc
03-rucksack-reorganization/go/: go.mod  main.go  main_test.go
03-rucksack-reorganization/rust/: Cargo.toml
04-camp-cleanup/go/: go.mod  main.go
04-camp-cleanup/rust/: Cargo.toml
05/rust/: Cargo.toml
06-tuning-trouble/c/: Makefile  main.c
06-tuning-trouble/rust/: Cargo.toml
06/rust/: Cargo.toml
07-no-space-left-on-device/go/: go.mod  main.go
07-no-space-left-on-device/python/: main.py
07-no-space-left-on-device/rust/: Cargo.toml
08/rust/: Cargo.toml
09-rope-bridge/rust/: Cargo.toml
10-cathods-ray-tube/rust/: Cargo.toml
11/rust/: Cargo.toml
12-hill-climbing-algorithm/python/: main.py
12-hill-climbing-algorithm/rust/: Cargo.toml
13-distress-signal/rust/: Cargo.toml
14-regolith-reservoir/python/: main.py
14-regolith-reservoir/rust/: Cargo.toml
14/rust/: Cargo.toml
15/rust/: Cargo.toml
16-proboscidea-volcanium/rust/: Cargo.toml
17-pyroclastic-flow/python/: main.py  python
17-pyroclastic-flow/rust/: Cargo.toml
17/rust/: Cargo.toml
18-boiling-boudlers/rust/: Cargo.toml
19-not-enough-minerals/rust/: Cargo.toml
20-grove-positioning-system/rust/: Cargo.toml
c/: Makefile  main.c
cli/: .env.example  Cargo.toml  README.org
cli/skeletons/: Cargo.toml  Cargo_two.toml  lib.rs  main.rs
cli/src/: cli.rs  constants.rs  data.rs  lib.rs  main.rs  skeleton.rs
cli/src/skeleton/: generate.rs
go/: main.go
scripts/: lib  main
utils/go/: go.mod  (+1 more)
(+66 files in other folders)
