[workspace]
members = [
  "01-calorie-counting/rust",
  "02-rock-paper-scissors/rust",
  "03-rucksack-reorganization/rust",
  "04-camp-cleanup/rust",
  "05-supply-stacks/rust",
  "06-tuning-trouble/rust",
  "07-no-space-left-on-device/rust",
  "08-treetop-tree-house/rust",
  "09-rope-bridge/rust",
  "10-cathods-ray-tube/rust",
  "11-monkey-in-the-middle/rust",
  "12-hill-climbing-algorithm/rust",
  "13-distress-signal/rust",
  "14-regolith-reservoir/rust",
  "15-beacon-exclusion-zone/rust",
  "16-proboscidea-volcanium/rust",
  "17-pyroclastic-flow/rust",
  "18-boiling-boudlers/rust",
  "19-not-enough-minerals/rust",
  "20-grove-positioning-system/rust",
  "21-monkey-math/rust",
  "22-monkey-map/rust",
  "utils/rust",
  "cli",
]
default-members = [
  "cli"
]
