[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
dotenvy = "0.15.6"
reqwest = { version = "0.11.13", features = ["cookies"] }
tokio = { version = "1.22.0", features = ["full"] }
